--- a/vc2013/YAAV.vcxproj
+++ b/vc2013/YAAV.vcxproj
@@ -1,3 +1,4 @@
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="12.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
@@ -190,9 +191,11 @@
   <ItemGroup />
   <ItemGroup />
   <ItemGroup>
+    <ClCompile Include="..\src\GridElement.cpp" />
     <ClCompile Include="..\src\YAAVApp.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\include\GridElement.h" />
     <ClInclude Include="..\include\Resources.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
